--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,35 @@ jobs:
           else
             ./bin/test.sh --wp ${{ matrix.wp }} --php 7.4 --multisite ${MULTISITE} --phpunit 7 --order-by=random
           fi
+
+  search-dev-tools:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out source code
+        uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # tag=v2.4.0
+
+      - name: Sanity check
+        run: |
+          if grep -q webpack-dev-server search/search-dev-tools/build/bundle.js; then
+            echo "Attempted to commit a development version of search-dev-tools, please rebuild with npm run build"
+            exit 1
+          fi
+
+      - name: Setup Node
+        uses: actions/setup-node@1f8c6b94b26d0feae1e387ca63ccbdc44d27b561 # tag=v2.5.1
+        with:
+          node-version: 'lts/*'
+          cache: npm
+          cache-dependency-path: search/search-dev-tools/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
+        working-directory: search/search-dev-tools
+
+      - name: Lint files
+        run: npm run lint
+        working-directory: search/search-dev-tools
+
+      - name: Build files
+        run: npm run build
+        working-directory: search/search-dev-tools
