--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,6 +42,7 @@ jobs:
         run: npm run lint
 
   lint-search-dev-tools:
+    name: Lint Search Dev Tools files
     runs-on: ubuntu-latest
     steps:
       - name: Check out source code
