--- a/.github/workflows/ci-php8.yml
+++ b/.github/workflows/ci-php8.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         wp:
           - "latest"
-          - "trunk"
+          - "nightly"
         multisite:
           - "yes"
           - "no"
