--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        php:
+          - "7.4"
+        phpiunit:
+          - "7"
         wp:
           - "5.5.9"
           - "5.6.8"
@@ -50,6 +54,26 @@ jobs:
           - wp: "nightly"
             multisite: "yes"
             jetpack: "yes"
+          - wp: "nightly"
+            multisite: "no"
+            jetpack: "yes"
+            php: "8.0"
+            phpunit: "9"
+          - wp: "nightly"
+            multisite: "yes"
+            jetpack: "yes"
+            php: "8.0"
+            phpunit: "9"
+          - wp: "latest"
+            multisite: "no"
+            jetpack: "yes"
+            php: "8.0"
+            phpunit: "9"
+          - wp: "latest"
+            multisite: "yes"
+            jetpack: "yes"
+            php: "8.0"
+            phpunit: "9"
     steps:
       - name: Check out source code
         uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # tag=v2.4.0
